--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -140,4 +139,5 @@ cython_debug/
 
 *.txt
 .idea
-
+**/.idea
+.google-cookie
